RESOLVED FIXED299873
[GStreamer] Don't advertise support for HDR on systems that don't explicitly declare that support
https://bugs.webkit.org/show_bug.cgi?id=299873
Summary [GStreamer] Don't advertise support for HDR on systems that don't explicitly ...
Enrique Ocaña
Reported 2025-09-30 06:45:50 PDT
Some websites and JS players can try to play HDR video on systems that don't support it. Even when there isn't an effective HDR connected screen detection mechanism yet in place on GStreamer ports, it would be nice to at least report HDR as unsupported to those webpages asking for it. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1564
Attachments
Enrique Ocaña
Comment 1 2025-09-30 11:58:12 PDT
EWS
Comment 2 2025-10-06 02:29:03 PDT
Committed 301049@main (989ce9fac92b): <https://commits.webkit.org/301049@main> Reviewed commits have been landed. Closing PR #51577 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-06 02:30:11 PDT
Diego Pino
Comment 4 2025-10-07 08:20:03 PDT
The changeset broke WPE build when `WPE_PLATFORM` is disabled: ``` 2345678[6/12] Linking CXX shared library lib/libWPEWebKit-2.0.so.1.7.0 FAILED: lib/libWPEWebKit-2.0.so.1.7.0 : && /usr/bin/clang++-20 -fPIC -fdiagnostics-color=always -fcolor-diagnostics -Wextra -Wall -Werror=undefined-internal -Werror=undefined-inline -pipe -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-parentheses-equality -Qunused-arguments -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fdebug-types-section -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O3 -DNDEBUG -Wl,--no-undefined -L/home/pwuser/webkit/WebKitBuild/DependenciesWPE/Root/lib -Wl,--gc-sections -Wl,--disable-new-dtags -Wl,--version-script,/home/pwuser/webkit/Source/WebKit/webkitglib-symbols.map -shared -Wl,-soname,libWPEWebKit-2.0.so.1 -o lib/libWPEWebKit-2.0.so.1.7.0 @CMakeFiles/WebKit.rsp && : /usr/bin/ld: Source/WebCore/CMakeFiles/WebCore.dir/./__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-56.cpp.o: in function `WebCore::GStreamerRegistryScanner::isConfigurationSupported(WebCore::GStreamerRegistryScanner::Configuration, WebCore::MediaConfiguration const&) const': UnifiedSource-3c72abbe-56.cpp:(.text._ZNK7WebCore24GStreamerRegistryScanner24isConfigurationSupportedENS0_13ConfigurationERKNS_18MediaConfigurationE+0x7c): undefined reference to `WebCore::primaryScreenDisplayID()' /usr/bin/ld: UnifiedSource-3c72abbe-56.cpp:(.text._ZNK7WebCore24GStreamerRegistryScanner24isConfigurationSupportedENS0_13ConfigurationERKNS_18MediaConfigurationE+0x80): undefined reference to `WebCore::screenData(unsigned int)' clang++-20: error: linker command failed with exit code 1 (use -v to see invocation) ninja: build stopped: subcommand failed. ``` Functions `screenData` and `primaryScreenDisplayID` are only defined when `WPE_PLATFORM` is enabled https://github.com/WebKit/WebKit/blob/main/Source/WebCore/platform/PlatformScreen.cpp#L29
Diego Pino
Comment 5 2025-10-07 08:22:13 PDT
EWS
Comment 6 2025-10-07 08:41:08 PDT
Committed 301141@main (d2b685c24ae4): <https://commits.webkit.org/301141@main> Reviewed commits have been landed. Closing PR #51946 and removing active labels.
Enrique Ocaña
Comment 7 2025-10-07 11:25:17 PDT
Diego, sorry for having introduced this error and thank a lot for having fixed it 🙏🙏🙏
Note You need to log in before you can comment on or make changes to this bug.