[GStreamer] Don't advertise support for HDR on systems that don't explicitly declare that support https://bugs.webkit.org/show_bug.cgi?id=299873

Reviewed by Philippe Normand.

Some websites and JS players can try to play HDR video on systems that
don't support it. Even when there isn't an effective HDR connected
screen detection mechanism yet in place on GStreamer ports, it would be
nice to at least report HDR as unsupported to those webpages asking for
it.

See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1564

This patch now filters the MediaCapabilities query, so if the webpage
is asking for an hdrMetadataType or a transferFunction and our
internal screen data doesn't acknowledge the presence of an HDR screen,
we reply that such MediaCapabilities combination is not supported.

Also, if the requested codecs aren't supported (even by software),
we now return that the MediaCapabilities combination is not supported.

Original author: Andrzej Surdej <Andrzej_Surdej@comcast.com>

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::isConfigurationSupported const): Apply filters. Check if codecs are supported.

Canonical link: https://commits.webkit.org/301049@main